--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -13,6 +13,7 @@
             </a>
         </div>
         <div class="content-body">
+            <div class="success-text">Admin Portal</div>
             <div class="success-text">Deploying to Azure with GitHub Actions</div>
             <div class="description line-1"> GitHub Action Workflow has been successfully setup</div>
             <div class="description line-2"> Your ASP.NET Core app is live on Azure Web Apps</div>
